--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
   "name": "offender-management-allocation-client",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "govuk-frontend": "^2.1.0"
+  },
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ministryofjustice/offender-management-allocation-manager.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ministryofjustice/offender-management-allocation-manager/issues"
+  },
+  "homepage": "https://github.com/ministryofjustice/offender-management-allocation-manager#readme"
 }
