--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -22,27 +22,23 @@ spec:
     spec:
       containers:
         - name: allocation-manager
-          image:
-            valueFrom:
-              secretKeyRef:
-                name: offender-management-allocation-manager
-                key: repo_url
+          image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
           command: ['sh', '-c', "bundle exec rails s -p 3000 -b '0.0.0.0' -P /tmp/server.pid"]
           ports:
             - containerPort: 3000
           livenessProbe:
             httpGet:
-              path: /
+              path: /status
               port: 3000
             initialDelaySeconds: 10
             periodSeconds: 60
           readinessProbe:
             httpGet:
-              path: /
+              path: /status
               port: 3000
-              initialDelaySeconds: 10
-              periodSeconds: 60
+            initialDelaySeconds: 10
+            periodSeconds: 60
           env:
             - name: SECRET_KEY_BASE
               valueFrom:
