--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
  name: allocation-manager
  namespace: offender-management-staging
  annotations:
-   kubernetes.io/ingress.class: “nginx”
+   kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   - host: allocation-manager-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
@@ -13,4 +13,4 @@ spec:
       - path: /
         backend:
           serviceName: allocation-manager
-          servicePort: http
+          servicePort: 3000
