--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -59,3 +59,13 @@ spec:
                 secretKeyRef:
                   name: allocation-manager-secrets
                   key: sentry_dsn
+            - name: NOMIS_OAUTH_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-manager-secrets
+                  key: nomis_oauth_client_id
+            - name: NOMIS_OAUTH_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-manager-secrets
+                  key: nomis_oauth_client_secret
