[MOICM-89] - Update CircleCI config
- reference correct deployment environment (staging or production)
- add step for deploying to production

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,13 +186,13 @@ jobs:
       - deploy:
           name: Deploy to staging
           command: |
-            kubectl set image -f deploy/deployment.yaml allocation-manager=${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1} --local -o yaml \
+            kubectl set image -f deploy/staging/deployment.yaml allocation-manager=${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1} --local -o yaml \
             | kubectl apply -f -
             kubectl apply \
-              -f ./deploy/ingress.yaml \
-              -f ./deploy/service.yaml \
-              -f ./deploy/allocation-manager-secrets.yaml \
-              -f ./deploy/deployment.yaml
+              -f ./deploy/staging/ingress.yaml \
+              -f ./deploy/staging/service.yaml \
+              -f ./deploy/staging/allocation-manager-secrets.yaml \
+              -f ./deploy/staging/deployment.yaml
 
 workflows:
   version: 2
@@ -219,3 +219,13 @@ workflows:
           filters:
             branches:
               only: master
+      - production_deploy_approval:
+          type: approval
+          requires:
+            - build_push_docker
+            - deploy_staging
+      - deploy_production:
+          type: approval
+          requires:
+            - production_deploy_approval
+
