--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-deploy/*secrets.yaml filter=git-crypt diff=gitcrypt
+deploy/staging/*secrets.yaml filter=git-crypt diff=gitcrypt
+deploy/production/*secrets.yaml filter=git-crypt diff=gitcrypt
