--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -66,6 +66,11 @@ spec:
                 secretKeyRef:
                   name: allocation-manager-secrets
                   key: sentry_dsn
+            - name: WEB_CONCURRENCY
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-manager-secrets
+                  key: rails_web_concurrency
             - name: NOMIS_OAUTH_CLIENT_ID
               valueFrom:
                 secretKeyRef:
@@ -81,3 +86,42 @@ spec:
                 secretKeyRef:
                   name: allocation-manager-secrets
                   key: nomis_oauth_host
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: allocation-manager-metrics
+  labels:
+    app: allocation-manager-metrics
+spec:
+  replicas: 1
+  revisionHistoryLimit: 1
+  minReadySeconds: 10
+  selector:
+    matchLabels:
+      app: allocation-manager-metrics
+  template:
+    metadata:
+      labels:
+        app: allocation-manager-metrics
+    spec:
+      containers:
+        - name: allocation-manager-metrics
+          image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
+          imagePullPolicy: Always
+          command: ['sh', '-c', "bundle exec puma prometheus_exporter --pidfile /tmp/server.pid"]
+          ports:
+            - containerPort: 9394
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
