--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,12 +28,20 @@ references:
     run:
       name: Configure GPG
       command: |
-        echo "${GIT_CRYPT_KEY}" | base64 -d | gpg --batch --allow-secret-key-import --import
+        echo "${GPG_PRIVATE_KEY}" | base64 -d | gpg --batch --allow-secret-key-import --import
 
   decrypt_secrets: &decrypt_secrets
     run:
       name: Decrypt secrets file
-      command: git-crypt unlock
+      command: |
+        gpg --export-ownertrust > /tmp/ownertrust.txt
+        echo $GPG_KEY_ID:1 >> /tmp/ownertrust.txt
+        gpg --import-ownertrust /tmp/ownertrust.txt
+        gpgconf --kill gpg-agent
+        gpg-agent --daemon --allow-preset-passphrase
+        /usr/libexec/gpg-preset-passphrase --preset --passphrase $GPG_PASSPHRASE $GPG_KEY_KEYGRIP_ID
+        git-crypt unlock
+
 
   install_aws_cli: &install_aws_cli
     run:
