--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -3,10 +3,15 @@ kind: Service
 metadata:
   name: allocation-manager
   namespace: offender-management-staging
+  labels:
+    app: allocation-manager
 spec:
   ports:
-  - protocol: TCP
-    port: 3000
+  - port: 3000
+    name: http
     targetPort: 3000
+  - port: 9394
+    name: metrics
+    targetPort: 9394
   selector:
     app: allocation-manager
