Deploy network policy and service monitor to staging environment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,6 +199,8 @@ jobs:
             kubectl apply \
               -f ./deploy/ingress.yaml \
               -f ./deploy/service.yaml \
+              -f ./deploy/service-monitor.yaml \
+              -f ./deploy/network-policy.yaml \
               -f ./deploy/allocation-manager-secrets.yaml \
               -f ./deploy/deployment.yaml
 
