--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -86,7 +86,7 @@ spec:
                 secretKeyRef:
                   name: allocation-manager-secrets
                   key: nomis_oauth_host
-        - name: allocation-api-metrics
+        - name: allocation-manager-metrics
           image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
           command: ['sh', '-c', "bundle exec prometheus_exporter"]
