Move host envvars into test step environment
I'm not convinced that we need the manager one, but will leave it in for now.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,6 +131,9 @@ jobs:
             ./cc-test-reporter before-build
             bundle exec rake
             ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
+          environment:
+            ALLOCATION_API_HOST: https://allocation-api-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
+            ALLOCATION_MANAGER_HOST: https://allocation-manager-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
       - store_test_results:
           path: coverage
       - store_artifacts:
