Add github team name config to another build step
This means we shouldn't need it in CircleCI envvars any more.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,8 @@ references:
           docker tag app "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${REPONAME}:latest"
           docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${REPONAME}:latest"
         fi
+      environment:
+        GITHUB_TEAM_NAME_SLUG: offender-management
 
 version: 2
 jobs:
