Reuse github team name definition in build config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,12 @@ references:
   ruby_image: &ruby_image
     image: circleci/ruby:2.5.3-node-browsers
 
+  github_team_name_slug: &github_team_name_slug
+    GITHUB_TEAM_NAME_SLUG: offender-management
+
   deploy_container_config: &deploy_container_config
     docker:
       - image: ${ECR_ENDPOINT}/cloud-platform/tools:circleci
-        environment:
-          GITHUB_TEAM_NAME_SLUG: offender-management
 
 
   install_gpg: &install_gpg
@@ -74,7 +75,7 @@ references:
           docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${REPONAME}:latest"
         fi
       environment:
-        GITHUB_TEAM_NAME_SLUG: offender-management
+        <<: *github_team_name_slug
         REPONAME: offender-management-allocation-manager
 
 version: 2
@@ -208,6 +209,8 @@ jobs:
               -f ./deploy/network-policy.yaml \
               -f ./deploy/allocation-manager-secrets.yaml \
               -f ./deploy/deployment.yaml
+          environment:
+            <<: *github_team_name_slug
 
 workflows:
   version: 2
