Output json as well as html from brakeman
And move the output files to a dedicated directory, to keep the artifacts
tidy.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,9 +151,9 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run: bundle --path vendor/bundle
-      - run: bundle exec brakeman -o brakeman.html
+      - run: bundle exec brakeman -o ~/test-results/brakeman/brakeman.json -o ~/test-results/brakeman/brakeman.html
       - store_artifacts:
-          path: brakeman.html
+          path: ~/test-results
 
   rubocop:
     <<: *defaults
