--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,14 +198,13 @@ jobs:
           command: |
             kubectl set image -f deploy/deployment.yaml allocation-manager=${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1} --local -o yaml \
             | kubectl annotate -f - kubernetes.io/change-cause="$CIRCLE_BUILD_URL" --local --o yaml \
-            | kubectl apply -f -
-            kubectl apply \
+            | kubectl apply \
+              -f - \
               -f ./deploy/ingress.yaml \
               -f ./deploy/service.yaml \
               -f ./deploy/service-monitor.yaml \
               -f ./deploy/network-policy.yaml \
               -f ./deploy/allocation-manager-secrets.yaml \
-              -f ./deploy/deployment.yaml
           environment:
             <<: *github_team_name_slug
 
