--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,6 +208,35 @@ jobs:
           environment:
             <<: *github_team_name_slug
 
+  deploy_production:
+    <<: *deploy_container_config
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: Kubectl deployment production setup
+          command: |
+            setup-kube-auth
+            kubectl config use-context production
+      - *install_gpg
+      - *configure_gpg
+      - *decrypt_secrets
+      - deploy:
+          name: Deploy to production
+          command: |
+            kubectl set image -f deploy/production/deployment.yaml allocation-manager=${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1} --local -o yaml \
+            | kubectl annotate -f - kubernetes.io/change-cause="$CIRCLE_BUILD_URL" --local -o yaml \
+            | kubectl apply --record=false \
+              -f - \
+              -f ./deploy/production/ingress.yaml \
+              -f ./deploy/production/service.yaml \
+              -f ./deploy/production/service-monitor.yaml \
+              -f ./deploy/production/network-policy.yaml \
+              -f ./deploy/production/allocation-manager-secrets.yaml \
+          environment:
+            <<: *github_team_name_slug
+
 workflows:
   version: 2
   build_and_test:
@@ -233,6 +262,13 @@ workflows:
       - deploy_staging:
           requires:
             - build_and_push_docker_image
+          filters:
+            branches:
+              only: master
+      - deploy_production:
+          requires:
+            - build_and_push_docker_image
+            - deploy_staging
           filters:
             branches:
               only: master
