--- a/deploy/production/deployment.yaml
+++ b/deploy/production/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         - name: allocation-manager
           image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
-          command: ['sh', '-c', "bundle exec puma -p 3000 -C ./config/puma_prod.rb --pidfile /tmp/server.pid"]
+          command: ['sh', '-c', "bundle exec rails db:migrate && bundle exec puma -p 3000 -C ./config/puma_prod.rb --pidfile /tmp/server.pid"]
           ports:
             - containerPort: 3000
           livenessProbe:
@@ -42,6 +42,26 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 60
           env:
+            - name: POSTGRES_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-rds-instance-output
+                  key: rds_instance_address
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-rds-instance-output
+                  key: postgres_password
+            - name: POSTGRES_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-rds-instance-output
+                  key: postgres_name
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-rds-instance-output
+                  key: postgres_user
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
