Use PROMETHEUS_METRICS env var to switch Prometheus Metrics export on/off

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ NOMIS_OAUTH_HOST="url"
 NOMIS_OAUTH_AUTHORISATION="base64 encoded string"
 NOMIS_OAUTH_CLIENT_ID="string"
 NOMIS_OAUTH_CLIENT_SECRET="string"
+PROMETHEUS_METRICS="string"
