--- a/deploy/staging/deployment.yaml
+++ b/deploy/staging/deployment.yaml
@@ -105,6 +105,11 @@ spec:
                 secretKeyRef:
                   name: allocation-manager-secrets
                   key: nomis_oauth_host
+            - name: GA_TRACKING_ID
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-manager-secrets
+                  key: ga_tracking_id
         - name: allocation-manager-metrics
           image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
