Add the support email address to the phase banner
Adds the support email address to the phase_banner file, but keeps it
secret.  Email addresses probably aren't private info, but if we can
reduce the amount of spam it has to handle, then that's a good thing.

Also adds vim swap files to the gitignore because otherwise they show up
in gitstatus if vim is still open.

--- a/deploy/production/deployment.yaml
+++ b/deploy/production/deployment.yaml
@@ -110,6 +110,11 @@ spec:
                 secretKeyRef:
                   name: allocation-manager-secrets
                   key: ga_tracking_id
+            - name: SUPPORT_EMAIL
+              valueFrom:
+                secretKeyRef:
+                  name: allocation-manager-secrets
+                  key: support_email
         - name: allocation-manager-metrics
           image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
