--- a/deploy/staging/ingress.yaml
+++ b/deploy/staging/ingress.yaml
@@ -6,6 +6,9 @@ metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
 spec:
+  tls:
+  - hosts:
+    - allocation-manager-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
   rules:
   - host: allocation-manager-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
     http:
