--- a/deploy/production/deployment.yaml
+++ b/deploy/production/deployment.yaml
@@ -115,6 +115,14 @@ spec:
                 secretKeyRef:
                   name: allocation-manager-secrets
                   key: support_email
+            - name: REDIS_URL
+              valueFrom:
+                secretKeyRef: elasticache-offender-management-allocation-manager-token-cache-production
+                key: primary_endpoint_address
+            - name: REDIS_AUTH
+              valueFrom:
+                secretKeyRef: elasticache-offender-management-allocation-manager-token-cache-production
+                key: auth_token
         - name: allocation-manager-metrics
           image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
           imagePullPolicy: Always
