Deploy rails-migration.yaml and cron-job.yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,6 +210,8 @@ jobs:
             | kubectl apply --record=false \
               -f - \
               -f ./deploy/staging/ingress.yaml \
+              -f ./deploy/staging/cronjob.yaml \
+              -f ./deploy/staging/rails-migration.yaml \
               -f ./deploy/staging/service.yaml \
               -f ./deploy/staging/service-monitor.yaml \
               -f ./deploy/staging/network-policy.yaml \
@@ -284,6 +286,8 @@ jobs:
             | kubectl apply --record=false \
               -f - \
               -f ./deploy/production/ingress.yaml \
+              -f ./deploy/staging/cronjob.yaml \
+              -f ./deploy/staging/rails-migration.yaml \
               -f ./deploy/production/service.yaml \
               -f ./deploy/production/service-monitor.yaml \
               -f ./deploy/production/network-policy.yaml \
