--- a/deploy/staging/rails-migration.yaml
+++ b/deploy/staging/rails-migration.yaml
@@ -7,8 +7,8 @@ spec:
   template:
     spec:
       containers:
-      - name: rails-app
-        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/davids-dummy-team/davids-dummy-app:rails-app-1.0
+      - name: allocation-manager
+        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
         command: [ 'sh', '-c', 'bundle exec rails db:migrate && bundle exec rails db:seed']
         envFrom:
           - configMapRef:
