--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,41 +89,38 @@ references:
 
   install_firefox_and_geckodriver: &install_firefox_and_geckodriver
     run:
-      name: install firefox
+      name: install firefox and geckodriver
       command: |
         wget -L "https://ftp.mozilla.org/pub/firefox/releases/65.0/linux-x86_64/en-US/firefox-65.0.tar.bz2" -O "firefox-65.0.tar.bz2"
         tar xjf "firefox-65.0.tar.bz2"
         sudo rm -rf /opt/firefox
         sudo mv firefox /opt/
         sudo ln -sf /opt/firefox/firefox /usr/bin/firefox
-    run:
-      name: install geckodriver
-      command: |
         wget https://github.com/mozilla/geckodriver/releases/download/v0.23.0/geckodriver-v0.23.0-linux64.tar.gz
         tar -zxvf geckodriver-v0.23.0-linux64.tar.gz
         sudo mv geckodriver /usr/local/bin/
 
   restore_and_save_gem_cache: &restore_and_save_gem_cache
-    - restore_cache:
+    restore_cache:
         keys:
         - integration-tests-v1-{{ checksum "Gemfile.lock" }}
         - integration-tests-v1-
-    - run:
+    run:
         name: Clone and install gems
         command: |
           git clone git@github.com:ministryofjustice/offender-management-integration-tests.git
           cd offender-management-integration-tests
           bundle check --path vendor/bundle || bundle install --path vendor/bundle
-    - save_cache:
+    save_cache:
         key: integration-tests-v1-{{ checksum "Gemfile.lock" }}
         paths:
         - ~/staging/vendor/bundle
 
   store_test_artifacts: &store_test_artifacts
-    - store_test_results:
+    store_test_results:
         path: ./offender-management-integration-tests/screenshots
-        - store_artifacts:
-            path: ./offender-management-integration-tests/screenshots
+    store_artifacts:
+        path: ./offender-management-integration-tests/screenshots
 
 version: 2
 jobs:
@@ -303,17 +300,17 @@ jobs:
     <<: *test_container_config
     working_directory: ~/production
     steps:
-    - checkout
-    - *restore_and_save_gem_cache
-    - *install_firefox_and_geckodriver
-    - run:
-        name: run smoke tests
-        command: |
-          cd offender-management-integration-tests
-          bundle exec rspec spec/smoke --no-color --format documentation --format RspecJunitFormatter -o screenshots/rspec.xml
-        environment:
-          START_PAGE: https://allocation-manager-production.apps.cloud-platform-live-0.k8s.integration.dsd.io
-    - *store_test_artifacts
+      - checkout
+      - *restore_and_save_gem_cache
+      - *install_firefox_and_geckodriver
+      - run:
+          name: run smoke tests
+          command: |
+            cd offender-management-integration-tests
+            bundle exec rspec spec/smoke --no-color --format documentation --format RspecJunitFormatter -o screenshots/rspec.xml
+          environment:
+            START_PAGE: https://allocation-manager-production.apps.cloud-platform-live-0.k8s.integration.dsd.io
+      - *store_test_artifacts
 
 workflows:
   version: 2
