--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,6 +249,7 @@ jobs:
               -f ./deploy/staging/network-policy.yaml \
               -f ./deploy/staging/allocation-manager-secrets.yaml \
               -f ./deploy/staging/shared-environment.yaml \
+              -f ./deploy/staging/dashboard.yaml \
           environment:
             <<: *github_team_name_slug
 
@@ -295,6 +296,7 @@ jobs:
               -f ./deploy/production/network-policy.yaml \
               -f ./deploy/production/allocation-manager-secrets.yaml \
               -f ./deploy/production/shared-environment.yaml \
+              -f .deploy/production/dashboard.yaml \
           environment:
             <<: *github_team_name_slug
 
