--- a/deploy/staging/cronjob.yaml
+++ b/deploy/staging/cronjob.yaml
@@ -14,12 +14,17 @@ spec:
         spec:
           containers:
           - name: integration-test-cleanup
-            image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
+            image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
             imagePullPolicy: Always
             command: ['sh', '-c', "bundle exec rake integration_tests:clean_up"]
+            envFrom:
+              - configMapRef:
+                  name: shared-environment
+              - secretRef:
+                  name: allocation-manager-secrets
             env:
-              - name: RAILS_ENV
-                value: 'production'
+              - name: PROMETHEUS_METRICS
+                value: "off"
               - name: POSTGRES_HOST
                 valueFrom:
                   secretKeyRef:
@@ -58,7 +63,7 @@ spec:
         spec:
           containers:
           - name: process-movements
-            image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-manager:latest
+            image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/offender-management/offender-management-allocation-manager:latest
             imagePullPolicy: Always
             command: ['sh', '-c', "bundle exec rake movements:process"]
             envFrom:
