--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ references:
 
   deploy_container_config: &deploy_container_config
     docker:
-      - image: ${ECR_ENDPOINT}/cloud-platform/tools:circleci
+      - image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/cloud-platform/tools:circleci
 
   test_container_config: &test_container_config
     docker:
