--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -278,23 +278,23 @@ jobs:
       - *store_test_results
       - *store_artifacts
 
-  test_production:
-    <<: *test_container_config
-    working_directory: ~/staging
-    steps:
-      - checkout
-      - *restore_cache
-      - *install_gems
-      - *save_cache
-      - run:
-          name: run smoke tests
-          command: |
-            cd offender-management-integration-tests
-            bundle exec rspec spec/smoke --no-color --format documentation --format RspecJunitFormatter -o screenshots/rspec.xml
-          environment:
-            PRODUCTION_START_PAGE: https://moic.service.justice.gov.uk
-      - *store_test_results
-      - *store_artifacts
+  # test_production:
+  #   <<: *test_container_config
+  #   working_directory: ~/staging
+  #   steps:
+  #     - checkout
+  #     - *restore_cache
+  #     - *install_gems
+  #     - *save_cache
+  #     - run:
+  #         name: run smoke tests
+  #         command: |
+  #           cd offender-management-integration-tests
+  #           bundle exec rspec spec/smoke --no-color --format documentation --format RspecJunitFormatter -o screenshots/rspec.xml
+  #         environment:
+  #           PRODUCTION_START_PAGE: https://moic.service.justice.gov.uk
+  #     - *store_test_results
+  #     - *store_artifacts
 
   deploy_production:
     <<: *deploy_container_config
@@ -377,9 +377,9 @@ workflows:
           filters:
             branches:
               only: master
-      - test_production:
-          requires:
-            - deploy_production
-          filters:
-            branches:
-              only: master
+      # - test_production:
+      #     requires:
+      #       - deploy_production
+      #     filters:
+      #       branches:
+      #         only: master
