Use rubocop-performance
The performance cops are being deprecated, and so now we need to use a
separate gem. Rubocop also seems a little faster after this PR.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
-require: rubocop-rspec
+require:
+  - rubocop-rspec
+  - rubocop-performance
 
 AllCops:
   # Exclude anything that isn't really part of our code.
