Appease the linter and keyworker settings

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ NOMIS_OAUTH_HOST="url"
 NOMIS_OAUTH_AUTHORISATION="base64 encoded string"
 NOMIS_OAUTH_CLIENT_ID="string"
 NOMIS_OAUTH_CLIENT_SECRET="string"
+KEYWORKER_API_HOST="url"
 PROMETHEUS_METRICS="string"
