--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -250,7 +250,7 @@ Layout/ExtraSpacing:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Layout/IndentArray:
+Layout/IndentFirstArrayElement:
   Enabled: false
 
 Layout/MultilineArrayBraceLayout:
